# azure-neo4j-mcp

./: .gitignore  AGENT_API.md  AUTH.md  AZURE_DEPLOY.md  AZURE_DEPLOY_v2.md  BEARER_AUTH.md  BEARER_AUTH_V2.md  CLAUDE.md  HTTP.md  M2M.md  README.md  SUPPORT.md
bearer-mcp-server/: .env.sample  README.md
bearer-mcp-server/client/: requirements.txt  test_bearer_client.py
bearer-mcp-server/docs/: ARCHITECTURE.md  IDENTITY_PROVIDER_SETUP.md  TROUBLESHOOTING.md
bearer-mcp-server/infra/: bicepconfig.json  main.bicep  main.bicepparam
bearer-mcp-server/scripts/: cleanup.sh  deploy.sh  setup-env.sh
client/: test_client.py
databrick_samples/: README.md  langgraph-mcp-tool-calling-agent.ipynb  neo4j-mcp-agent-deploy.ipynb  neo4j-mcp-http-connection.ipynb  neo4j_mcp_agent.py
docs/: ARCHITECTURE.md  DATABRICKS_CUSTOM_CONTAINERS.md
infra/: app-registration.bicep  main.bicep  main.bicepparam
langgraph-mcp-agent/: pyproject.toml
local_http_validation/: .env.sample  README.md  test_http_mode.py
sample-mcp-agent/: simple-agent.py
samples/: README.md  SETUP.md  setup_env.py
samples/sample-maf-agent/: IMPROVE.md  MCP_AGENT.md  MCP_STATUS.md  pyproject.toml
samples/sample-maf-agent/src/samples/: __init__.py
samples/sample-maf-agent/src/samples/basic_fulltext/: __init__.py  main.py
samples/sample-maf-agent/src/samples/graph_enriched/: main.py
samples/sample-maf-agent/src/samples/mcp_tools/: __init__.py  main.py
samples/sample-maf-agent/src/samples/mcp_write_test/: main.py
samples/sample-maf-agent/src/samples/shared/: __init__.py  agent.py  cli.py
samples/sample-maf-agent/src/samples/vector_search/: main.py
scripts/: cleanup.sh  create-user.sh  deploy.sh  logs.sh  setup-databricks-secrets.sh  setup-env.sh  setup_databricks_secrets.sh
simple-mcp-server/: .env.sample  README.md
simple-mcp-server/samples/langgraph-mcp-agent/: LANGGRAPH_BEST_PRACTICES.md  pyproject.toml  simple-agent.py  test-vector-search.py
test-sso/: debug_token.py  pyproject.toml  setup-env.sh  test_m2m.py  test_sso.py  validate_entra_m2m.py
(+50 files in other folders)
